--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <h2>услуги наших клубов</h2>
         
         <div class="services-slider">
-            <!-- <div class="test"> -->
+            <div class="test">
                 <div class="slide">
                     <img src="images/services-slider/akva.jpg" alt="Аква территория">
                     <h6>Аква территория</h6>
@@ -271,14 +271,7 @@
                     <h6>Йога</h6>
                     <p>Йога - идеальны не только физическая форма, но и эмоциональное состояние</p>
                 </div>
-            <!-- </div> -->
-            <div class='slider-arrow prev'> 
-                <span > < </span> 
             </div>
-
-            <div class='slider-arrow next'> 
-                <span> > </span> 
-            </div>  
         </div>
     </div>
 </section>
