--- a/schelkovo.html
+++ b/schelkovo.html
@@ -347,8 +347,8 @@
     <h2>Фотогалерея</h2>
     <div class="gallery-bg">
         <div class="wrapper">
-            <div class="gallery-slider">
-                <div class="slide">
+            <div class="gallery-slider ">
+                <div class="slide active-slide">
                     <img src="images/gallery/photo1.jpg" alt="">
                 </div>
                 <div class="slide">
@@ -371,55 +371,57 @@
     <div class="wrapper">
         <h2>услуги наших клубов</h2>
         <div class="services-slider">
-            <div class="slide">
-                <img src="images/services-slider/akva.jpg" alt="Аква территория">
-                <h6>Аква территория</h6>
-                <p>Плавание полезно для людей абсолютно любой возрастной категории. Бассейн 5 на 6 метров.</p>
-            </div>
-            <div class="slide">
-                <img src="images/services-slider/vesy.jpg" alt="Зона свободных весов">
-                <h6>Зона свободных весов</h6>
-                <p>Здесь есть всё необходимое, чтобы достичь максимальных результатов</p>
-            </div>
-            <div class="slide">
-                <img src="images/services-slider/TRX.jpg" alt="Зона TRX">
-                <h6>Зона TRX</h6>
-                <p>Укрепление суставов и связок, увеличение мышечной массы, выносливости и гибкости</p>
-            </div>
-            <div class="slide">
-                <img src="images/services-slider/kardio.jpg" alt="Кардиозона">
-                <h6>Кардиозона</h6>
-                <p>Эффективное снижение веса и улучшение работы сердечно-сосудистой системы</p>
-            </div>
-            <div class="slide">
-                <img src="images/services-slider/yoga.jpg" alt="Йога">
-                <h6>Йога</h6>
-                <p>Йога - идеальны не только физическая форма, но и эмоциональное состояние</p>
-            </div>
-            <div class="slide">
-                <img src="images/services-slider/akva.jpg" alt="Аква территория">
-                <h6>Аква территория</h6>
-                <p>Плавание полезно для людей абсолютно любой возрастной категории. Бассейн 5 на 6 метров.</p>
-            </div>
-            <div class="slide">
-                <img src="images/services-slider/vesy.jpg" alt="Зона свободных весов">
-                <h6>Зона свободных весов</h6>
-                <p>Здесь есть всё необходимое, чтобы достичь максимальных результатов</p>
-            </div>
-            <div class="slide">
-                <img src="images/services-slider/TRX.jpg" alt="Зона TRX">
-                <h6>Зона TRX</h6>
-                <p>Укрепление суставов и связок, увеличение мышечной массы, выносливости и гибкости</p>
-            </div>
-            <div class="slide">
-                <img src="images/services-slider/kardio.jpg" alt="Кардиозона">
-                <h6>Кардиозона</h6>
-                <p>Эффективное снижение веса и улучшение работы сердечно-сосудистой системы</p>
-            </div>
-            <div class="slide">
-                <img src="images/services-slider/yoga.jpg" alt="Йога">
-                <h6>Йога</h6>
-                <p>Йога - идеальны не только физическая форма, но и эмоциональное состояние</p>
+            <div class="test">
+                <div class="slide">
+                    <img src="images/services-slider/akva.jpg" alt="Аква территория">
+                    <h6>Аква территория</h6>
+                    <p>Плавание полезно для людей абсолютно любой возрастной категории. Бассейн 5 на 6 метров.</p>
+                </div>
+                <div class="slide">
+                    <img src="images/services-slider/vesy.jpg" alt="Зона свободных весов">
+                    <h6>Зона свободных весов</h6>
+                    <p>Здесь есть всё необходимое, чтобы достичь максимальных результатов</p>
+                </div>
+                <div class="slide">
+                    <img src="images/services-slider/TRX.jpg" alt="Зона TRX">
+                    <h6>Зона TRX</h6>
+                    <p>Укрепление суставов и связок, увеличение мышечной массы, выносливости и гибкости</p>
+                </div>
+                <div class="slide">
+                    <img src="images/services-slider/kardio.jpg" alt="Кардиозона">
+                    <h6>Кардиозона</h6>
+                    <p>Эффективное снижение веса и улучшение работы сердечно-сосудистой системы</p>
+                </div>
+                <div class="slide">
+                    <img src="images/services-slider/yoga.jpg" alt="Йога">
+                    <h6>Йога</h6>
+                    <p>Йога - идеальны не только физическая форма, но и эмоциональное состояние</p>
+                </div>
+                <div class="slide">
+                    <img src="images/services-slider/akva.jpg" alt="Аква территория">
+                    <h6>Аква территория</h6>
+                    <p>Плавание полезно для людей абсолютно любой возрастной категории. Бассейн 5 на 6 метров.</p>
+                </div>
+                <div class="slide">
+                    <img src="images/services-slider/vesy.jpg" alt="Зона свободных весов">
+                    <h6>Зона свободных весов</h6>
+                    <p>Здесь есть всё необходимое, чтобы достичь максимальных результатов</p>
+                </div>
+                <div class="slide">
+                    <img src="images/services-slider/TRX.jpg" alt="Зона TRX">
+                    <h6>Зона TRX</h6>
+                    <p>Укрепление суставов и связок, увеличение мышечной массы, выносливости и гибкости</p>
+                </div>
+                <div class="slide">
+                    <img src="images/services-slider/kardio.jpg" alt="Кардиозона">
+                    <h6>Кардиозона</h6>
+                    <p>Эффективное снижение веса и улучшение работы сердечно-сосудистой системы</p>
+                </div>
+                <div class="slide">
+                    <img src="images/services-slider/yoga.jpg" alt="Йога">
+                    <h6>Йога</h6>
+                    <p>Йога - идеальны не только физическая форма, но и эмоциональное состояние</p>
+                </div>
             </div>
         </div>
     </div>
