fix: I fixed calculator, close popUp

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     </label>
                     </div>
                     <div class="price">
-                        <div class="price-message input-text"><input name="name" type="text" id="promokod" required 
+                        <div class="price-message input-text"><input name="name" type="text" id="promokod"  
                                                                      placeholder="Промокод"></div>
                         <div class="price-message">Цена:</div>
                         <div class="price-message" id="price-total">2999</div>
@@ -383,14 +383,14 @@
                         <div class="choose-club">
                             <h5>Выбрать клуб</h5>
                             <div class="club">
-                                <input type="radio" id="footer_leto_mozaika" name="club-name" value="mozaika"><label
+                                <input type="radio" id="footer_leto_mozaika" name="club-name" value="mozaika" checked><label
                                     for="footer_leto_mozaika" >
                                 <h6>Тело «Мозаика»</h6>
                                 <p>Россия, Москва, 7-я Кожуховская ул.,&nbsp;9</p>
                             </label>
                             </div>
                             <div class="club">
-                                <input type="radio" id="footer_leto_schelkovo" name="club-name" value="schelkovo"><label
+                                <input type="radio" id="footer_leto_schelkovo" name="club-name" value="schelkovo" ><label
                                     for="footer_leto_schelkovo">
                                 <h6>Тело «Щелково»</h6>
                                 <p>Россия, г. Щелково, ул. Советская, д.&nbsp;16</p>
