--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="fixed-gift">
     <img src=images/gift.png alt>
 </div>
-<header class="header-main">
+<header class="header-main" id='head'>
     <div class="head">
         <div class="wrapper">
             <div class="head-main">
@@ -433,7 +433,7 @@
 
 </footer>
 <div class="wrapper">
-    <a href="#" id="totop"><i class="fa fa-arrow-up" aria-hidden="true"></i>
+    <a href="#head" id="totop"><i class="fa fa-arrow-up" aria-hidden="true"></i>
     </a>
 </div>
 <div class="popup" id="callback_form">
