--- a/mozaika.html
+++ b/mozaika.html
@@ -12,7 +12,7 @@
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 </head>
 <body>
-<header class="header-main">
+<header class="header-main" id='head'>
     <div class="head">
         <div class="wrapper">
             <div class="head-main">
@@ -503,7 +503,7 @@
     </div>
 </footer>
 <div class="wrapper">
-    <a href="#" id="totop"><i class="fa fa-arrow-up" aria-hidden="true"></i>
+    <a href="#head" id="totop"><i class="fa fa-arrow-up" aria-hidden="true"></i>
     </a>
 </div>
 <div class="popup" id="callback_form">
